# rat-nexus

./: .gitignore  Cargo.toml  README.md
.roo/: mcp.json
.serena/: project.yml
rat-demo/: Cargo.toml
rat-demo/src/: app.rs  main.rs  model.rs
rat-demo/src/pages/: counter.rs  flappy.rs  menu.rs  mod.rs  monitor.rs  particles.rs  snake.rs  tictactoe.rs  timer.rs
rat-nexus/src/: application.rs  error.rs  lib.rs  task.rs
rat-nexus/src/component/: traits.rs
rat-nexus/src/router/: mod.rs  traits.rs
rat-nexus/src/state/: mod.rs
src/: application.rs  lib.rs  main.rs
src/app/: mod.rs
src/component/: mod.rs  traits.rs
src/router/: mod.rs  traits.rs
src/state/: mod.rs
